Add new experiment

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             </div>
             <div class="col-sm-8">
               <select class="form-control" id="inputExperiment">
-                <option value="initialbuffering">Experimento QoE vídeo 1</option>
-                <option value="rebuffering">Experimento QoE vídeo 2 (N/A)</option>
+                <option value="initialbuffering">Experimento QoE vídeo 1 (T buffering inicial)</option>
+                <option value="rebuffering" selected="selected">Experimento QoE vídeo 2 (T rebuffering)</option>
                 <option value="exp3">Experimento QoE vídeo 3 (N/A)</option>
               </select>
             </div>
